tests/golden/defaults/capi-core/capi-core/cluster-api/10_kustomize/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_capi-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-system/capi-serving-cert
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: cluster-api
  name: capi-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-cluster-x-k8s-io-v1beta2-cluster
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.cluster.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusters
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-addons-cluster-x-k8s-io-v1beta2-clusterresourceset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.clusterresourceset.addons.cluster.x-k8s.io
    rules:
      - apiGroups:
          - addons.cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterresourcesets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-runtime-cluster-x-k8s-io-v1beta2-extensionconfig
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.extensionconfig.runtime.addons.cluster.x-k8s.io
    rules:
      - apiGroups:
          - runtime.cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - extensionconfigs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-cluster-x-k8s-io-v1beta2-machine
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machine.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - machines
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-cluster-x-k8s-io-v1beta2-machinedeployment
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinedeployment.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinedeployments
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-cluster-x-k8s-io-v1beta2-machinehealthcheck
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinehealthcheck.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinehealthchecks
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-cluster-x-k8s-io-v1beta2-machinepool
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinepool.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinepools
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: syn-cluster-api
        path: /mutate-cluster-x-k8s-io-v1beta2-machineset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machineset.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta2
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinesets
    sideEffects: None
