tests/golden/defaults/capi-core/capi-core/cluster-api/10_kustomize/rbac.authorization.k8s.io_v1_clusterrole_capi-aggregated-manager-role.yaml
aggregationRule:
  clusterRoleSelectors:
    - matchLabels:
        cluster.x-k8s.io/aggregate-to-manager: 'true'
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    cluster.x-k8s.io/provider: cluster-api
  name: capi-aggregated-manager-role
