tests/golden/defaults/capi-core/capi-core/cluster-api/10_kustomize/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/aggregate-to-manager: 'true'
    cluster.x-k8s.io/provider: cluster-api
  name: capi-manager-role
rules:
  - apiGroups:
      - ''
    resources:
      - configmaps
    verbs:
      - delete
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - ''
    resources:
      - events
    verbs:
      - create
      - patch
  - apiGroups:
      - ''
    resources:
      - namespaces
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - ''
    resources:
      - secrets
    verbs:
      - create
      - delete
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - addons.cluster.x-k8s.io
    resources:
      - clusterresourcesets/finalizers
      - clusterresourcesets/status
    verbs:
      - get
      - patch
      - update
  - apiGroups:
      - addons.cluster.x-k8s.io
      - bootstrap.cluster.x-k8s.io
      - controlplane.cluster.x-k8s.io
      - infrastructure.cluster.x-k8s.io
    resources:
      - '*'
    verbs:
      - create
      - delete
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - apiextensions.k8s.io
    resources:
      - customresourcedefinitions
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - apiextensions.k8s.io
    resourceNames:
      - clusterclasses.cluster.x-k8s.io
      - clusterresourcesetbindings.addons.cluster.x-k8s.io
      - clusterresourcesets.addons.cluster.x-k8s.io
      - clusters.cluster.x-k8s.io
      - extensionconfigs.runtime.cluster.x-k8s.io
      - ipaddressclaims.ipam.cluster.x-k8s.io
      - ipaddresses.ipam.cluster.x-k8s.io
      - machinedeployments.cluster.x-k8s.io
      - machinedrainrules.cluster.x-k8s.io
      - machinehealthchecks.cluster.x-k8s.io
      - machinepools.cluster.x-k8s.io
      - machines.cluster.x-k8s.io
      - machinesets.cluster.x-k8s.io
    resources:
      - customresourcedefinitions
      - customresourcedefinitions/status
    verbs:
      - patch
      - update
  - apiGroups:
      - authentication.k8s.io
    resources:
      - tokenreviews
    verbs:
      - create
  - apiGroups:
      - authorization.k8s.io
    resources:
      - subjectaccessreviews
    verbs:
      - create
  - apiGroups:
      - cluster.x-k8s.io
    resources:
      - clusterclasses
      - clusterclasses/status
      - clusters
      - clusters/finalizers
      - clusters/status
      - machinedrainrules
      - machinehealthchecks/finalizers
      - machinehealthchecks/status
    verbs:
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - cluster.x-k8s.io
    resources:
      - machinedeployments
      - machinedeployments/finalizers
      - machinedeployments/status
      - machinehealthchecks
      - machinepools
      - machinepools/finalizers
      - machinepools/status
      - machines
      - machines/finalizers
      - machines/status
      - machinesets
      - machinesets/finalizers
      - machinesets/status
    verbs:
      - create
      - delete
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - ipam.cluster.x-k8s.io
    resources:
      - ipaddressclaims
      - ipaddresses
    verbs:
      - get
      - list
      - patch
      - update
      - watch
  - apiGroups:
      - ipam.cluster.x-k8s.io
    resources:
      - ipaddressclaims/status
    verbs:
      - patch
      - update
  - apiGroups:
      - runtime.cluster.x-k8s.io
    resources:
      - extensionconfigs
      - extensionconfigs/status
    verbs:
      - get
      - list
      - patch
      - update
      - watch
