tests/golden/defaults/capi-core/capi-core/cluster-api/10_kustomize/rbac.authorization.k8s.io_v1_rolebinding_capi-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: cluster-api
  name: capi-leader-election-rolebinding
  namespace: syn-cluster-api
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: capi-leader-election-role
subjects:
  - kind: ServiceAccount
    name: capi-manager
    namespace: syn-cluster-api
