tests/golden/defaults/capi-core/capi-core/cluster-api/10_kustomize/v1_service_capi-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: cluster-api
  name: capi-webhook-service
  namespace: capi-system
spec:
  ports:
    - port: 443
      targetPort: webhook-server
  selector:
    cluster.x-k8s.io/provider: cluster-api
